<resources>
    <string name="app_name">HELPING HAND</string>
    <string name="txt_username">Enter the Name</string>
    <string name="txt_phnnumber">Enter the Phone Number</string>
    <string name="txt_password">Enter a Strong Password</string>
    <string name="txt_passwordRetype">Retype the Password</string>
    <string name="txt_btn_register">REGISTER</string>
    <string name="txt_btn_login">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_enterpassword">Enter the Password</string>
    <string name="txt_btnsignup">SIGNUP</string>
    <string name="contentDescriptionLogo">This is the app logo</string>
    <string name="frogot_password">Froget your Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home2">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_post">Post</string>
    <string name="title_myposts">My Posts</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_navigation2">NavigationActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_otpsend">We have sent an OTP to your registered mobile number. Please enter it below.</string>
    <string name="txt_btn_submit">SUBMIT</string>
    <string name="txt_btn_resend">RESEND</string>
    <string name="txt_hint_otp">Enter OTP here</string>
    <string name="txt_newPass">Please enter a new password below</string>
    <string name="txt_hint_pass">New Password</string>
    <string name="txt_hint">Re-Type the Password</string>
    <string name="txt_btn_confirm">CONFIRM</string>
    <string name="enter_details">Enter your details below</string>
    <string name="user_name">A User Name</string>
    <string name="user_phn_number">Mobile Phone Number</string>
    <string name="btn_clear">CLEAR</string>
    <string name="txt_email">Enter Your Email Address</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="comment_hint">Write your comment here...</string>
    <string name="loadingComment_hint">Loading Comments...</string>
    <string name="posterName">Loading Authors Name...</string>
    <string name="title_NewPost">NEW POST</string>
    <string name="newPostHint">Write something about your post..</string>
    <string name="btn_post">POST</string>
    <string name="title_Post">POSTS</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_delete">DELETE</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="message">Type your message</string>
    <string name="deleteMsg">Delete Message</string>
    <string name="editMsg">Edit Message</string>
    <string name="deleteChat">Delete Chat</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="phone">Phone</string>
    <string name="newPassword">newPassword</string>
    <string name="re_type_password">re type password</string>
    <string name="workPlace">workPlace</string>
    <string name="Country">Country</string>
    <string name="Position">Position</string>
    <string name="Notification">Notification</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="ViewProfile">View Profile</string>
    <string name="userProfile">User Profile</string>
    <string name="deleteProfile">Delete Profile</string>
    <string name="fullName">FullName</string>
    <string name="faq">FAQ</string>
    <string name="olutionForVeterinary">Solution for veterinary</string>
    <string name="ICanHelpForYourMedicalIssues">I Can Help For your medical Issues</string>
    <string name="time">10.45pm</string>
    <string name="WriteYourComment">Write your comments</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="btnCmnt">COMMENT</string>
    <string name="cmntTXT">Type your comment here...</string>
    <string name="hintcmnt">Comments will show here...</string>
    <string name="cmntownername">Commenter will show here</string>
    <string name="shwcmnt">Comment will show here</string>
    <string name="deletetxt">Delete</string>
    <string name="helphim">I CAN HELP</string>
    <string name="shwHere">The text will show here...</string>
    <string name="cmtn">COMMENT</string>
    <string name="gchat">Global Chat</string>
    <string name="dctChat">Direct Chat</string>
    <string name="cpcmt">Type here to update</string>
    <string name="saveCmnt">"Save "</string>
    <string name="svmecmnt">Edit</string>
    <string name="updateCMnt">UPDATE</string>
    <string name="lknBtn">Like IT</string>
    <string name="txt_name">Enter your name</string>
    <string name="addrs">Address</string>
    <string name="newpassrest">" Please enter your email below. If it is a valid email, a password reset link will be sent to it."</string>
    <string name="entermail">Enter Email Here</string>
    <string name="tvbewpost">Create a Post</string>
    <string name="cartadd">Add to Cart</string>
    <string name="desc">Enter the Description Here</string>
    <string name="addtomarket">Add a Medicine to the Market Feed</string>
    <string name="pricve">Enter the Price Here</string>
    <string name="medname">Enter Medcine Name Here</string>
    <string name="mednam">Medicine Name</string>
    <string name="meddes">Description</string>
    <string name="prio">Price</string>
    <string name="medsc">Description</string>
    <string name="asd">Description</string>

</resources>
