<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_button"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home2" />
    <item
        android:id="@+id/navigation_posting_button"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_myPosts_button"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_myposts" />

    <item
        android:id="@+id/navigation_chat_button"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_profile_button"
        android:icon="@android:drawable/btn_star"
        android:title="@string/title_profile" />

</menu>