<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistationFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/orange"
        android:gravity="center|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/header_textsize" />

    <TextView
        android:id="@+id/frogot_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/enter_details"
        android:textColor="@color/red"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="191dp"
        android:contentDescription="@string/contentDescriptionLogo"
        android:src="@drawable/logotrans"
        />

    <EditText
        android:id="@+id/edtTxtUserEmail"
        android:layout_width="@dimen/width_inputbutton"
        android:layout_height="@dimen/height_inputbutton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:width="@dimen/width_inputbutton"
        android:autofillHints="@string/txt_username"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtTxtUserName"
        android:layout_width="@dimen/width_inputbutton"
        android:layout_height="@dimen/height_inputbutton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:width="@dimen/width_inputbutton"
        android:autofillHints="@string/txt_username"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txt_name"
        android:inputType="textEmailAddress" />


    <!--    <EditText-->
    <!--        android:id="@+id/editTextTextPersonMobile"-->
    <!--        android:layout_width="@dimen/width_inputbutton"-->
    <!--        android:layout_height="@dimen/height_inputbutton"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:width="@dimen/width_inputbutton"-->
    <!--        android:autofillHints="@string/txt_username"-->
    <!--        android:ems="10"-->
    <!--        android:gravity="center|center_horizontal|center_vertical"-->
    <!--        android:hint="@string/user_phn_number"-->
    <!--        android:inputType="phone" />-->

    <EditText
        android:id="@+id/edtTxtUserPasswrod"
        android:layout_width="@dimen/width_inputbutton"
        android:layout_height="@dimen/height_inputbutton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:width="@dimen/width_inputbutton"
        android:autofillHints="@string/txt_enterpassword"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtTxtUserPassRetype"
        android:layout_width="@dimen/width_inputbutton"
        android:layout_height="@dimen/height_inputbutton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:width="@dimen/width_inputbutton"
        android:autofillHints="@string/txt_enterpassword"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txt_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/width_inputbutton"
        android:layout_height="@dimen/height_inputbutton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:width="@dimen/width_inputbutton"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt_btn_register"
        android:textSize="@dimen/button_textSize" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>