<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommentFragment">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputANDview_height"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/posterName"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="380dp"
        android:layout_height="340dp"
        android:layout_gravity="center"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="391dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/loadingComment_hint" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="391dp"
        android:layout_height="@dimen/inputANDview_height"
        android:layout_gravity="center"
        android:autofillHints="@string/comment_hint"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment_hint" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/send_button" />

</LinearLayout>