<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/allPostCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"

        app:cardBackgroundColor="@color/color9">

        <ImageView
            android:id="@+id/allPostImageView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/post3" />

        <TextView
            android:id="@+id/allPostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:gravity="center"
            android:text="@string/shwHere"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/allPostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"
            android:gravity="center_vertical"
            android:text="@string/dctChat" />

        <Button
            android:id="@+id/allPostCmntBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="20dp"
            android:text="@string/gchat" />


    </androidx.cardview.widget.CardView>
</LinearLayout>