<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myPostsFragment">

    <!-- TODO: Update blank fragment layout -->





        <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/title_Post"
        android:textSize="28sp"
        android:textStyle="bold">

    </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="180dp"

            android:src="@drawable/post1"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="5dp"

            />

            <Button
                android:id="@+id/button_edit"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:width="@dimen/width_inputbutton"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/btn_edit"
                android:textSize="@dimen/button_textSize" />

            <Button
            android:id="@+id/button_regste"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
            android:width="@dimen/width_inputbutton"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btn_delete"
            android:textSize="@dimen/button_textSize" />


        </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="260dp"

        android:layout_weight="1"
        android:background="#888686" />


</FrameLayout>